Добавлены команды на ввод матриц